--- a/protocols.ini
+++ b/protocols.ini
@@ -401,11 +401,12 @@ Code.740=00 00 01 80 0C A0 E1 40 12 00 05 0F AC 0A EF 1D \
 
 [JVC]
 PID=00 34
-CmdTranslator=Translator(lsb,comp)
+
+DevParms=Device=0
+DeviceTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
+CmdTranslator=Translator(lsb,comp)
 Notes=
-DevParms=Device Code
-FixedData=FF
 Code.S3C80=43 8B 11 8B 19 C5 C9 80 20 08 08 01 07 00 F4 01 \
            07 03 03 73 50 10 7C 08 2A 00 00 00 5A 95 20 0D \
            20 0D 8D 01 46
@@ -2698,3 +2699,4 @@ Code.740=07 1B 11 F7 5D 07 22 10 D0 03 3C 14 83 FF 5D BF \
 #            CA A3 DD 05 35 01 A8 00 00 08 76 00 01 6B 03 B6 \
 #            04 78 8D 01 46
 #
+
