Denon, Sharp, and Panasonic Combo2
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@42 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -192,10 +192,11 @@ Code.S3C80=3C 8F 11 8B 0F 85 C0 40 05 06 00 DD 10 7C 00 DD \
 
 [Denon]
 PID=00 1C
+DevParms=Device Code
+DeviceTranslator=Translator(lsb,comp,0,5)
+FixedData=00
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb)
-DevParms=Device Code
-FixedData=00
 Notes=
 Code.S3C80=3D 92 11 8B 16 49 05 08 00 84 01 75 00 84 03 87 \
            83 C2 00 00 00 00 00 00 03 5F A0 0C 05 76 03 01 \
@@ -647,13 +648,17 @@ Code.740=0B 1C 32 80 0E C1 72 10 08 08 01 7F 02 A1 5F 02 \
 
 [Panasonic Combo2]
 PID=00 42
-CmdTranslator=Translator(lsb,comp,0,8,8)
-CmdParms=OBC=0
-Notes=hacked version
-DevParms=Main Device,Sub Device
+DevParms=Main Device=160,Sub Device=0,OEM Dev1=2,OEM Dev2=32
+DeviceTranslator=Translator(lsb,comp,0,8,16)  \
+                 Translator(lsb,comp,1,8,24) \
+                 Translator(lsb,comp,2,8,0)  \
+                 Translator(lsb,comp,3,8,8)
 FixedData=bf fb fa ff
-DefaultCmd=00 ff
-CmdIndex=1
+CmdParms=Sub Device=0,OBC=0
+CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1)
+DefaultCmd=ff ff
+CmdIndex=0
+Notes=
 Code.S3C80=45 91 42 8b 12 8f 44 08 08 00 da 00 c6 00 da 02 \
            7b 90 c9 06 d0 03 54 e6 0c e8 08 08 09 06 08 05 \
            B4 06 c0 B4 07 c0 09 08 f6 01 46 f6 01 0a fb 0d \
@@ -1026,11 +1031,12 @@ Code.6805=0D 1C 22 A6 60 BD B7 A6 02 AE 18 CD 01 9F 9D 9D \
 
 [Sharp]
 PID=00 1C
+DevParms=Device Code
+DeviceTranslator=Translator(lsb,comp,0,5)
+FixedData=04
 CmdTranslator=Translator(lsb)
 CmdParms=OBC=0
 Notes=
-DevParms=Device Code
-FixedData=00
 Code.S3C80=3D 92 11 8B 16 49 05 08 00 84 01 75 00 84 03 87 \
            83 C2 00 00 00 00 00 00 03 5F A0 0C 05 76 03 01 \
            6B 0D E4 25 1C E4 26 1D 0C 03 09 12 E6 24 02 18 \
