Added two versions of RECS80
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@66 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -953,6 +953,33 @@ Code.6805=06 0e 02 20 0f f4 f0 00 1c 04 08 02 26 03 82 08 \
           9b e2 06 06 33 5a 33 5b cd 01 83 cd 01 8c 24 f8 \
           81
 
+[RECS80 (45)]
+PID=00 45
+DevParms=Device:3=0
+DeviceTranslator=Translator(0,3,comp)
+FixedData=00
+CmdParms=OBC:6=0
+CmdTranslator=Translator(0,6,comp)
+DefaultCmd=00
+Code.S3C80=3D 92 11 8B 0E C5 41 05 06 00 4E 09 7F 00 4E 0E \
+           70 ED 85 08 00 C0 C0 C0 03 CF C0 03 8D 01 46
+Code.740=0B 1A 11 80 0C E0 A2 01 06 05 06 07 4A 0A 93 76 \
+         C9 17 5D 03 3C 07 6A A5 5A 6A 66 5D 46 5D 4C 00 \
+         FF
+
+[RECS80 (68)]
+PID=00 68
+DevParms=Device:3=0
+DeviceTranslator=Translator(0,3,2,comp)
+FixedData=00
+CmdParms=OBC:6=0
+CmdTranslator=Translator(0,6,comp)
+DefaultCmd=FC
+Code.S3C80=46 A6 11 8B 0F C5 C1 40 05 06 00 5A 0A CF 00 5A \
+           10 72 0E 0A 76 00 01 6B 03 46 03 40 8D 01 46
+Code.740=0D 1F 11 80 0C E0 A2 01 06 05 06 08 2B 0B EA 86 \
+         B0 17 5A 02 CF 5D 4C 00 FF
+
 [ReplayTV (Simple)]
 PID=00 40
 CmdTranslator=Translator()
