Request 730274: Some device parameters should be hex, in ini and Gui
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@104 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -431,7 +431,7 @@ Code.740=10 1D 11 80 0C E0 A2 01 0A 08 08 02 1F 03 B7 34 \
 PID=00 5A
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
-DevParms=Device Number,Sub Device,Parm=0
+DevParms=Device Number,Sub Device,Parm:$=0
 DeviceTranslator=NECParmTranslator(0)
 FixedData=00 ff ff
 Notes=38.1 kHz
@@ -455,7 +455,7 @@ Code.740=0B 1A 31 80 15 F6 B8 01 16 08 08 01 A1 03 17 69 \
 PID=00 5A
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
-DevParms=Device Number,Sub Device,Parm=1
+DevParms=Device Number,Sub Device,Parm:$=1
 DeviceTranslator=NECParmTranslator(1)
 FixedData=01 ff ff
 Notes=38.1 kHz
