Add explanation of new $ tag to for device parms that use hex
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@107 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -6,8 +6,10 @@
 # [Protocol name]
 # PID=2 hex bytes protocol id
 # DevParms=<parmlist> where <parmlist> is a comma separated list of parms in the form
-#      <name>[:<decription>][=<default value>]
+#      <name>[:[$][<decription>]][=<default value>]
 #      Where
+#      $ means the parameter uses only hex values, in the GUI and for values in the
+#        description or default value.
 #      <description> is one of
 #      - min-max, the min and max values allowed
 #      - bits, the number of bits to used to store the value, equivalent to
