Incorporate Chris Hixson's protocols.ini updates
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@110 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -132,9 +132,10 @@ Code.740=0C 18 12 80 15 E9 BE 01 15 08 02 03 1D 01 A5 69 \
 PID=01 46
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb,comp)
-DevParms=Device Code,Shift OBC
-FixedData=DF 5F
 Notes=38.1 kHz
+DevParms=Device Code=4,Shift OBC=5
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,comp,1,8,8)
+FixedData=DF 5F
 Code.S3C80=43 8B 21 8B 12 ED 44 08 08 01 18 01 06 01 18 03 \
            39 D2 DC 11 94 08 B6 76 05 01 6B 09 F6 01 46 46 \
            29 0D 8D 01 49 46 05 01 00 10 F6 01 46 20 10 F6 \
@@ -149,6 +150,7 @@ PID=00 43
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb,comp)
 DevParms=Device Code
+DeviceTranslator=Translator(lsb,comp,0,8,0) Translator(lsb,0,8,8)
 FixedData=Ff 00
 Notes=NEC 36.7 kHz
 Code.S3C80=47 91 21 8B 12 CF 45 08 08 01 18 01 06 01 18 03 \
@@ -160,6 +162,7 @@ PID=00 A5
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb)
 DevParms=Device Code
+DeviceTranslator=Translator(lsb,0,8,0)
 FixedData=00
 Notes=NEC 36.7 kHz
 Code.S3C80=54 AD 11 8B 19 B5 85 90 38 03 07 01 00 00 F2 01 \
@@ -185,7 +188,8 @@ Code.S3C80=3d 90 11 8b 14 85 40 03 08 00 da 0a 12 00 da 10 \
 PID=00 E4
 CmdParms=OBC=0
 CmdTranslator=Translator()
-DevParms=Device Code
+DevParms=Device Code:5=2
+DeviceTranslator=Translator(0,5)
 FixedData=10
 Notes=official code
 Code.S3C80=3C 8F 11 8B 0F 85 C0 40 05 06 00 DD 10 7C 00 DD \
@@ -267,7 +271,8 @@ PID=01 0F
 CmdTranslator=Translator()
 CmdParms=OBC=0
 Notes=sat/1005
-DevParms=Device Code
+DevParms=Device Code:4=0
+DeviceTranslator=Translator(0,8)
 FixedData=00
 Code.S3C80=43 8B 11 8B 12 85 49 08 05 01 0B 02 F6 01 0B 05 \
            1C 0B 93 01 0B 0B A6 18 04 E4 03 04 19 03 8D 01 \
@@ -311,7 +316,7 @@ Code.740=07 0C 21 80 0C E0 82 21 30 08 07 01 F9 01 F8 30 \
 
 [Emerson]
 PID=00 65
-CmdTranslator=Translator(lsb,comp))
+CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
 Notes=
 DevParms=Device 1,Device 2,Device 3
@@ -327,6 +332,7 @@ CmdTranslator=Translator(lsb)
 CmdParms=OBC=0
 Notes=
 DevParms=Device Code
+DeviceTranslator=Translator(lsb)
 FixedData=00
 Code.S3C80=3C 91 11 8B 0D 05 04 08 02 76 00 BB 00 D3 02 66 \
            42 81 B0 C6 56 03 EF 08 04 10 C0 B4 04 C0 5B 03 \
@@ -404,12 +410,11 @@ Code.740=00 00 01 80 0C A0 E1 40 12 00 05 0F AC 0A EF 1D \
 
 [JVC]
 PID=00 34
-
-DevParms=Device=0
-DeviceTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb,comp)
 Notes=
+DevParms=Device=0
+DeviceTranslator=Translator(lsb,comp)
 Code.S3C80=43 8B 11 8B 19 C5 C9 80 20 08 08 01 07 00 F4 01 \
            07 03 03 73 50 10 7C 08 2A 00 00 00 5A 95 20 0D \
            20 0D 8D 01 46
@@ -417,11 +422,30 @@ Code.740=0B 1A 11 80 10 E0 B8 01 14 08 08 01 9C 02 FC 2D \
          55 40 06 66 02 22 00 A2 70 A0 11 22 44 3C A2 7F \
          4C 00 FF
 
+[JVC-48]
+PID=00 C9
+CmdTranslator=Translator(lsb,comp)
+CmdParms=OBC=0
+Notes=JVC version
+DevParms=Main Device,Sub Device
+DeviceTranslator=Translator(lsb,comp,0,8,24) \
+                 Translator(lsb,comp,1,8,32) \
+                 XorCheck(8,0,255,2,24)
+FixedData=ff 3f 7f ff ff
+Code.S3C80=45 91 51 8B 12 8F 44 08 08 00 DA 00 C6 00 DA 02 \
+           7B 90 C9 06 D0 03 54 E6 0C E8 60 03 20 01 E4 08 \
+           09 B4 03 09 20 10 F6 01 46 F6 01 0A FB 0D 00 0C \
+           EB F4 C6 3E 00 00 B0 4A F6 01 0A AF
+Code.740=0B 1C 51 80 0E E1 72 10 08 08 01 7F 02 A1 5F 02 \
+         80 03 39 44 5D E6 5B A5 62 45 5D 85 63 E6 69 4C \
+         00 FF
+
 [Mitsubishi]
 PID=00 14
 CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
 DevParms=Device Number
+DeviceTranslator=Translator(lsb,comp)
 FixedData=ff
 Notes=s16a in ccf2efc
 Code.S3C80=47 A9 11 8B 0E C5 41 08 08 00 96 01 B8 00 96 04 \
@@ -534,6 +558,7 @@ CmdTranslator=Translator()
 CmdParms=OBC=0
 Notes=
 DevParms=Device 1,Device 2
+DeviceTranslator=Translator(0,8,0) Translator(1,8,8)
 FixedData=00 00
 Code.S3C80=3F 97 21 8B 15 00 00 58 00 74 00 58 00 C6 00 C5 \
            00 74 00 58 01 18 00 58 01 70 1C 1A F6 01 4C 38 \
@@ -557,6 +582,7 @@ CmdTranslator=Translator(comp)
 CmdParms=OBC=0
 Notes=European
 DevParms=Device Code
+DeviceTranslator=Translator()
 FixedData=00
 Code.S3C80=3D 91 11 8B 12 C5 45 02 08 01 38 08 9E 01 38 0D \
            8A F0 09 01 38 06 27 E6 25 01 08 00 C0 C0 C0 03 \
@@ -668,21 +694,6 @@ Code.S3C80=45 91 42 8b 12 8f 44 08 08 00 da 00 c6 00 da 02 \
 Code.740=0B 1C 42 80 0E E3 72 10 08 08 01 7F 02 A1 5F 02 \
          80 03 39 A5 62 85 60 45 5F 45 61 85 62 4C 00 FF
 
-[Panasonic JVC]
-PID=00 C9
-CmdTranslator=Translator(lsb,comp)
-CmdParms=OBC=0
-Notes=JVC version
-DevParms=Main Device,Sub Device
-FixedData=ff 3f 7f ff ff
-Code.S3C80=45 91 51 8B 12 8F 44 08 08 00 DA 00 C6 00 DA 02 \
-           7B 90 C9 06 D0 03 54 E6 0C E8 60 03 20 01 E4 08 \
-           09 B4 03 09 20 10 F6 01 46 F6 01 0A FB 0D 00 0C \
-           EB F4 C6 3E 00 00 B0 4A F6 01 0A AF
-Code.740=0B 1C 51 80 0E E1 72 10 08 08 01 7F 02 A1 5F 02 \
-         80 03 39 44 5D E6 5B A5 62 45 5D 85 63 E6 69 4C \
-         00 FF
-
 [Panasonic2 (LCD)]
 PID=01 09
 CmdTranslator=Translator(lsb)
@@ -700,6 +711,7 @@ CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
 Notes=40 kHz
 DevParms=Device Code
+DeviceTranslator=Translator(lsb,comp)
 FixedData=FF
 Code.S3C80=40 84 11 8B 12 E5 45 08 08 00 FF 00 FF 00 FF 03 \
            16 AD 90 10 A9 08 43 8D 01 46
@@ -802,6 +814,7 @@ CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
 Notes=
 DevParms=Device Code
+DeviceTranslator=Translator(lsb,comp)
 FixedData=ff
 Code.S3C80=43 8C 11 8B 16 C5 45 08 08 01 09 00 F5 01 09 03 \
            07 7B 8E 10 7C 08 2A 00 00 00 09 8D 01 61
@@ -876,6 +889,7 @@ CmdTranslator=Translator()
 CmdParms=OBC=0
 Notes=
 DevParms=Device Code
+DeviceTranslator=Translator(0,8,8)
 FixedData=80 00
 Code.S3C80=35 A5 21 8B 13 CE 05 08 08 00 DE 00 00 00 00 00 \
            CC D0 52 05 35 01 A8 04 4C 03 C7 34 B0 C5 B0 C6 \
@@ -1033,6 +1047,7 @@ CmdTranslator=Translator(0,8,8)
 CmdParms=OBC=0
 Notes=official version
 DevParms=Device Code,Unit Code
+DeviceTranslator=Translator(0,8,8)
 FixedData=e0 01
 DefaultCmd=00 00
 CmdIndex=1
@@ -1084,6 +1099,7 @@ CmdTranslator=Translator(lsb,comp)
 CmdParms=OBC=0
 Notes=offical version
 DevParms=Main Device,Sub Device
+DeviceTranslator=Translator(lsb,comp,0,8,24) Translator(lsb,comp,1,8,32)
 FixedData=00 aa a5 ff ff
 DefaultCmd=00 00
 Code.S3C80=43 8B 52 8B 14 8F 45 08 08 00 CB 00 C4 00 CB 02 \
