Two byte version of G.I. 4DTV
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@114 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -356,10 +356,10 @@ Code.S3C80=3D 91 01 8B 12 C5 45 08 04 01 F4 05 C8 01 F4 01 \
 
 [GI 4DTV Official]
 PID=00 A4
-CmdTranslator=Translator(lsb,comp)
+CmdTranslator=GI2()
 CmdParms=OBC=0
 Notes=official version
-DevParms=Unit Code
+DevParms=Unit Code=0
 DefaultCmd=00 00
 Code.S3C80=3D 91 02 8B 12 CC 45 00 06 01 F4 01 E0 01 F4 05 \
            C8 C3 3C 09 C4 03 D4 8D 01 46
