Fixed default for Panasonic Combo2
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@124 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -676,7 +676,7 @@ choice of which to use on the Setup sheet only affects the default for new\n\
 functions on the functions sheet.  It does not affect the generated upgrade.\n\
 You could put 96 on the Setup sheet, then switch to the functions sheet and\n\
 enter or paste in all the EFCs that use device 96, then change to 112 on the\n\
-Setup sheet and enter or paste in all the EFCs that use use device 112.  This\n\
+Setup sheet and enter or paste in all the EFCs that use device 112.  This\n\
 may save time vs. selecting the device for each function on the functions\n\
 sheet.  When you're done, it doesn't matter which of the two device numbers\n\
 you leave on the Setup sheet (but it must be one of those two.  The individual\n\
@@ -690,7 +690,7 @@ incorrectly for most of the possible combinations of Device and Sub Device\n\
 values.  Fortunately, it gets it right for several of the most commonly used\n\
 combinations.  An error message will be displayed if two or all four of the\n\
 combinations implied by your choice of Device and Subdevice will have wrong\n\
-check bytes.  If only two will be wrong and you wantto use just the other\n\
+check bytes.  If only two will be wrong and you want to use just the other\n\
 two, you can proceed.  If all four will be wrong, the upgrade would be\n\
 useless (the Panasonic device will ignore all signals with wrong check bytes\n\
 even though the Device, Subdevice and OBC bytes are all correct).  In that\n\
@@ -728,11 +728,21 @@ DeviceTranslator=Translator(lsb,comp,0,8,16)  \
                  Translator(lsb,comp,2,8,0)  \
                  Translator(lsb,comp,3,8,8)
 FixedData=bf fb fa ff
-CmdParms=Sub Device=0,OBC=0
+CmdParms=Sub Device=[1],OBC=0
 CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1)
 DefaultCmd=ff ff
 CmdIndex=0
-Notes=
+Notes=Combines all Sub Device numbers for one Device number.\n\
+\n\
+The Sub Device on this setup page serves only as a default for the Sub Device\n\
+selected for each function of the functions page.\n\
+The setup page Sub Device does get encoded in the fixed data but the remote\n\
+ignores that byte of fixed data and uses the Sub Device of each function\n\
+instead.\n\
+\n\
+Normally leave the OEM fields blank to default to 2 and 32, which are the only\n\
+values used by Panasonic.  To use this combo as a JVC-48 combo, change those\n\
+to 3 and 1.
 Code.S3C80=45 91 42 8b 12 8f 44 08 08 00 da 00 c6 00 da 02 \
            7b 90 c9 06 d0 03 54 e6 0c e8 08 08 09 06 08 05 \
            B4 06 c0 B4 07 c0 09 08 f6 01 46 f6 01 0a fb 0d \
