John merged in Chris's changes to combo protocols
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@125 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -99,7 +99,7 @@ Notes=
 Code.S3C80=3D 91 21 8B 13 E6 44 08 08 01 12 03 3C 01 12 01 \
            0B D2 37 11 7E 08 C3 05 08 04 37 01 0C F6 01 46 \
            E6 28 C0 46 29 01 8D 01 46 46 29 01 8D 01 46
-#                               Protocol upgrade code for 740 porocessor
+#                               Protocol upgrade code for 740 processor
 Code.740=0C 18 21 80 15 EF BE 01 16 08 08 03 1D 01 A5 69 \
          8C 55 06 D1 02 02 69 8C 06 D1 A5 5F 85 60 A5 5D \
          49 FF 85 5F A5 5E 49 FF 46 5E 46 5E 46 5E A2 03 \
@@ -117,15 +117,15 @@ CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
 DefaultCmd=E1 FF
 CmdIndex=1
 Notes=We have (rather arbitrarily) assigned the name "Sub Device" to the portion of\n\
-Aiwa device information that CAN'T be varied between functions in this combo\n\
-protocol.  The decoder and the other Aiwa protocol (in RemoteMaster) both use this\n\
-same terminology (the non Combo Aiwa protocol in KM doesn't).  Normally\n\
-this part of the device information is zero, so you normally put a 0 in the\n\
-Sub Device field on the Setup sheet (or leave it blank, which defaults to 0).\n\
-\n\
-On the functions sheet you can independently specify both the Device and\n\
-either EFC or OBC of each funtion.  The two part Hex command encodes both\n\
-the device and the OBC.
+      Aiwa device information that CAN'T be varied between functions in this combo\n\
+      protocol.  The decoder and the other Aiwa protocol (in RemoteMaster) both use this\n\
+      same terminology (the non Combo Aiwa protocol in KM doesn't).  Normally\n\
+      this part of the device information is zero, so you normally put a 0 in the\n\
+      Sub Device field on the Setup sheet (or leave it blank, which defaults to 0).\n\
+      \n\
+      On the functions sheet you can independently specify both the Device and\n\
+      either EFC or OBC of each funtion.  The two part Hex command encodes both\n\
+      the device and the OBC.
 Code.S3C80=3D 91 12 8B 13 E6 44 08 08 01 12 03 3C 01 12 01 \
            0B D3 04 11 7E 08 C3 05 60 03 60 04 60 05 18 03 \
            E4 04 03 19 04 20 10 00 11 F6 01 46 E6 28 40 46 \
@@ -226,10 +226,10 @@ Code.740=0B 19 11 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 \
 
 [Denon Combo (Official)]
 PID=00 9C
-CmdParms=OBC=0
-CmdTranslator=Translator(lsb,comp,0,8,8)
+CmdParms=Device:5=0,OBC=0
+CmdTranslator=Translator(lsb,comp,0,5,0) Translator(lsb,comp,1,8,8)
 Notes=Official version
-defaultCmd=F8 00
+DefaultCmd=F8 00
 CmdIndex=1
 Code.S3C80=3D 92 02 8B 0D 49 05 08 00 84 01 75 00 84 03 87 \
            83 C2 E6 24 03 20 10 0C 05 E4 03 05 60 05 90 05 \
@@ -244,8 +244,8 @@ Code.740=0B 1A 02 80 11 E8 80 01 0A 05 08 01 F5 03 53 41 \
 
 [Denon Combo]
 PID=00 47
-CmdParms=OBC=0
-CmdTranslator=Translator(lsb,0,8,8)
+CmdParms=Device:5,OBC=0
+CmdTranslator=Translator(lsb,comp,0,5,0) Translator(lsb,1,8,8)
 Notes=hacked version
 DefaultCmd=F8 00
 CmdIndex=1
@@ -391,8 +391,8 @@ Code.740=0B 1A 01 80 15 E0 BE 01 13 08 08 06 C7 03 DB 61 \
 
 [HK Combo]
 PID=01 41
-CmdTranslator=Translator(lsb,comp,0,8,8)
-CmdParms=OBC=0
+CmdTranslator=Translator(lsb,0,1,0) Translator(lsb,comp,1,8,8)
+CmdParms=Device :128.112|130.114=0,OBC=0
 FixedData=FE F1
 DefaultCmd=00 00
 CmdIndex=1
@@ -510,13 +510,13 @@ Code.740=0B 1A 31 80 15 F6 B8 01 16 08 08 01 A1 03 17 69 \
          19 37 5D 02 22 00 97 5D 0F 22 00 3C C0 7E 44 5E \
          3C 01 6B 22 06 90 03 60 4F 7F 2F 7F 4C 00 FF
 
-
 [NEC1 Combo]
 PID=01 40
-CmdTranslator=Translator(lsb,comp)
-CmdParms=OBC=0
+CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
+CmdParms=Sub Device,OBC=0
+CmdIndex=1
 Notes=38.1 kHz
-DevParms=Device Code
+DevParms=Device Code=184
 DeviceTranslator=Translator(lsb,comp,0,8,8)
 FixedData=00 e2
 DefaultCmd=1d 00
@@ -529,9 +529,11 @@ Code.740=0B 1A 22 80 15 E3 BE 01 16 08 08 01 A1 03 17 69 \
 
 [NEC2 Combo]
 PID=01 40
-CmdTranslator=Translator(lsb,comp)
-CmdParms=OBC=0
-DevParms=Device Code
+CmdTranslator=Translator(lsb,comp) Translator(lsb,comp,1,8,8)
+CmdParms=Sub Device,OBC=0
+CmdIndex=1
+DefaultCmd=1d 00
+DevParms=Device Code=184
 DeviceTranslator=Translator(lsb,comp,0,8,8)
 FixedData=01 e2
 Notes=38.1 kHz
@@ -657,44 +659,44 @@ CmdParms=Device:144|128=0,Sub Device:0|1=0,OBC=0
 CmdParmInit=PanasonicVcr()
 CmdTranslator=Translator(lsb,comp,2) Translator(0,1,8) Translator(1,1,9)
 Notes=Combines two device codes that differ in bit 4 of their binary form and two\n\
-Sub Device codes that differ in bit 0.\n\
-\n\
-Select the default Device and Sub device codes on the Setup page.  The\n\
-alternate Device and Sub Device values are computed and made available\n\
-on the pull-downs on the functions sheet.\n\
-\n\
-Normally leave the OEM fields blank to default to 2 and 32, which are the only\n\
-values used by Panasonic.  To use this combo as a JVC-48 combo, change those\n\
-to 3 and 1.\n\
-\n\
-On the functions sheet you can enter an EFC or OBC and have the default Device\n\
-and Sub Device automatically filled in and/or you can pull down the choices\n\
-for Device or Sub Device and select the alternate value(s).\n\
-\n\
-Given a pair of Device numbers that differ in bit 4, such as 112 and 96, the\n\
-choice of which to use on the Setup sheet only affects the default for new\n\
-functions on the functions sheet.  It does not affect the generated upgrade.\n\
-You could put 96 on the Setup sheet, then switch to the functions sheet and\n\
-enter or paste in all the EFCs that use device 96, then change to 112 on the\n\
-Setup sheet and enter or paste in all the EFCs that use device 112.  This\n\
-may save time vs. selecting the device for each function on the functions\n\
-sheet.  When you're done, it doesn't matter which of the two device numbers\n\
-you leave on the Setup sheet (but it must be one of those two.  The individual\n\
-functions only remember bit 4 of the device number while the Setup sheet\n\
-provides all the other bits).\n\
-\n\
-Behavior is similar for pairs of Sub Devices differing only in bit 0.\n\
-\n\
-Unfortunately, the UEI code for this protocol computes the check bytes\n\
-incorrectly for most of the possible combinations of Device and Sub Device\n\
-values.  Fortunately, it gets it right for several of the most commonly used\n\
-combinations.  An error message will be displayed if two or all four of the\n\
-combinations implied by your choice of Device and Subdevice will have wrong\n\
-check bytes.  If only two will be wrong and you want to use just the other\n\
-two, you can proceed.  If all four will be wrong, the upgrade would be\n\
-useless (the Panasonic device will ignore all signals with wrong check bytes\n\
-even though the Device, Subdevice and OBC bytes are all correct).  In that\n\
-case you should look into the other Panasonic Combo protocols.
+      Sub Device codes that differ in bit 0.\n\
+      \n\
+      Select the default Device and Sub device codes on the Setup page.  The\n\
+      alternate Device and Sub Device values are computed and made available\n\
+      on the pull-downs on the functions sheet.\n\
+      \n\
+      Normally leave the OEM fields blank to default to 2 and 32, which are the only\n\
+      values used by Panasonic.  To use this combo as a JVC-48 combo, change those\n\
+      to 3 and 1.\n\
+      \n\
+      On the functions sheet you can enter an EFC or OBC and have the default Device\n\
+      and Sub Device automatically filled in and/or you can pull down the choices\n\
+      for Device or Sub Device and select the alternate value(s).\n\
+      \n\
+      Given a pair of Device numbers that differ in bit 4, such as 112 and 96, the\n\
+      choice of which to use on the Setup sheet only affects the default for new\n\
+      functions on the functions sheet.  It does not affect the generated upgrade.\n\
+      You could put 96 on the Setup sheet, then switch to the functions sheet and\n\
+      enter or paste in all the EFCs that use device 96, then change to 112 on the\n\
+      Setup sheet and enter or paste in all the EFCs that use device 112.  This\n\
+      may save time vs. selecting the device for each function on the functions\n\
+      sheet.  When you're done, it doesn't matter which of the two device numbers\n\
+      you leave on the Setup sheet (but it must be one of those two.  The individual\n\
+      functions only remember bit 4 of the device number while the Setup sheet\n\
+      provides all the other bits).\n\
+      \n\
+      Behavior is similar for pairs of Sub Devices differing only in bit 0.\n\
+      \n\
+      Unfortunately, the UEI code for this protocol computes the check bytes\n\
+      incorrectly for most of the possible combinations of Device and Sub Device\n\
+      values.  Fortunately, it gets it right for several of the most commonly used\n\
+      combinations.  An error message will be displayed if two or all four of the\n\
+      combinations implied by your choice of Device and Subdevice will have wrong\n\
+      check bytes.  If only two will be wrong and you wantto use just the other\n\
+      two, you can proceed.  If all four will be wrong, the upgrade would be\n\
+      useless (the Panasonic device will ignore all signals with wrong check bytes\n\
+      even though the Device, Subdevice and OBC bytes are all correct).  In that\n\
+      case you should look into the other Panasonic Combo protocols.
 DefaultCmd=00 00
 Code.S3C80=45 91 42 8B 12 8F 45 08 08 00 DA 00 C6 00 DA 02 \
            7B 90 C9 06 D0 03 54 08 08 37 0E 06 18 05 77 17 \
@@ -780,42 +782,42 @@ CmdParms=Prefix Dev:none|X=0,Prefix Cmd:none|X=0,Device:1|2,OBC=0
 CmdParmInit=PickInitializer(0,,0) PickInitializer(1,,1) PickInitializer(2,0,2)
 CmdTranslator=Translator(lsb,comp,3) Translator(0,1,5) Translator(1,1,5) Translator(2,1,5)
 Notes=DVD/0525,0571\n\
-A Pioneer signal consists of either one or two parts.  Each part has both a\n\
-device and a command.\n\
-\n\
-"Device 1" on the Setup Sheet is used as the device for the first part of two\n\
-part signals and as the only device for one part signals.\n\
-\n\
-"Prefix Command" on the Setup sheet is used as the first command for two\n\
-part signals.  It isn't used for one part signals.\n\
-\n\
-"Device 2" on the Setup sheet is used as the device for the second part of two\n\
-part signals.  It isn't used for one part signals.\n\
-\n\
-A function on the functions sheet can be fully specified by any one of EFC or\n\
-OBC or Hex.  In case of a two part signal from a decoder, this is the EFC, OBC\n\
-or Hex of just the second part of the decoded signal.\n\
-\n\
-The functions sheet also has columns for "Prefix Device", "Prefix Command",\n\
-and "Device".\n\
-\n\
-Any OBC with bit 5 set can be sent (by this protocol) only as a one part\n\
-signal and will force the "Prefix" columns to say "none" and will force the\n\
-device column to be Device 1 from the Setup sheet.\n\
-\n\
-Any OBC with bit 5 clear can be sent (by this protocol) only as the second\n\
-part of a two part signal and will force the "Prefix" columns to indicate the\n\
-first part of the two part signal and will force the device column to be\n\
-Device 2 from the Setup sheet.\n\
-\n\
-You can change the selection in one of the Prefix columns or the Device column\n\
-and it will change the other two to be consistent as well as changing bit 5\n\
-of the OBC to be consistent.\n\
-\n\
-The set of signals you need for your Pioneer device may or may not be covered\n\
-by these limits.  If you need more flexibility, you should look into the other\n\
-Pioneer protocols and/or use Key Moves on another setup code for some of your\n\
-signals.
+      A Pioneer signal consists of either one or two parts.  Each part has both a\n\
+      device and a command.\n\
+      \n\
+      "Device 1" on the Setup Sheet is used as the device for the first part of two\n\
+      part signals and as the only device for one part signals.\n\
+      \n\
+      "Prefix Command" on the Setup sheet is used as the first command for two\n\
+      part signals.  It isn't used for one part signals.\n\
+      \n\
+      "Device 2" on the Setup sheet is used as the device for the second part of two\n\
+      part signals.  It isn't used for one part signals.\n\
+      \n\
+      A function on the functions sheet can be fully specified by any one of EFC or\n\
+      OBC or Hex.  In case of a two part signal from a decoder, this is the EFC, OBC\n\
+      or Hex of just the second part of the decoded signal.\n\
+      \n\
+      The functions sheet also has columns for "Prefix Device", "Prefix Command",\n\
+      and "Device".\n\
+      \n\
+      Any OBC with bit 5 set can be sent (by this protocol) only as a one part\n\
+      signal and will force the "Prefix" columns to say "none" and will force the\n\
+      device column to be Device 1 from the Setup sheet.\n\
+      \n\
+      Any OBC with bit 5 clear can be sent (by this protocol) only as the second\n\
+      part of a two part signal and will force the "Prefix" columns to indicate the\n\
+      first part of the two part signal and will force the device column to be\n\
+      Device 2 from the Setup sheet.\n\
+      \n\
+      You can change the selection in one of the Prefix columns or the Device column\n\
+      and it will change the other two to be consistent as well as changing bit 5\n\
+      of the OBC to be consistent.\n\
+      \n\
+      The set of signals you need for your Pioneer device may or may not be covered\n\
+      by these limits.  If you need more flexibility, you should look into the other\n\
+      Pioneer protocols and/or use Key Moves on another setup code for some of your\n\
+      signals.
 DevParms=Device 1=163,Prefix Command=153,Device 2=175
 FixedData=3a 66 0a
 DeviceTranslator=Translator(lsb,comp,0,8) Translator(lsb,comp,1,8,8) \
@@ -1008,7 +1010,7 @@ PID=00 AF
 CmdTranslator=Translator()
 CmdParms=OBC=0
 Notes=
-DevParms=Device Code
+DevParms=Device Code:4
 FixedData=0f
 DeviceTranslator=Translator(0,4)
 Code.S3C80=28 60 11 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 \
@@ -1036,8 +1038,8 @@ Code.740=05 0E 11 80 0F F4 18 1D 04 08 03 87 02 3A 09 01 \
 
 [RCA Combo (Official)]
 PID=01 14
-CmdTranslator=Translator(0,8,8)
-CmdParms=OBC=0
+CmdTranslator=Translator(0,4,0) Translator(1,8,8)
+CmdParms=Device=0:4,OBC=0
 Notes=official version
 DefaultCmd=0f 00
 CmdIndex=1
@@ -1046,21 +1048,21 @@ Code.S3C80=28 60 02 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 \
 Code.740=07 0C 02 80 0E F4 72 1D 04 08 03 87 02 3A 08 E8 \
          E4 06 27 E6 69 4C 00 FF
 
-[RCA Combo (w/Duration)]
-PID=01 43
-CmdTranslator=Translator(0,8,8)
-CmdParms=OBC=0
-Notes=S3C8 hacked combo
-DevParms=Duration
-DefaultCmd=0f 00
-CmdIndex=1
-Code.S3C80=28 60 02 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 \
-           E0 0F 8C 07 D0 07 BC 20 10 00 11 E6 0D 00 8D 01 \
-           46
-Code.6805=06 0e 02 20 0f f4 f0 00 1c 04 08 02 26 03 82 08 \
-          9b e2 06 06 33 5a 33 5b cd 01 83 cd 01 8c 24 f8 \
-          81
-
+#[RCA Combo (w/Duration)]
+#PID=01 43
+#CmdTranslator=Translator(0,4,0) Translator(1,8,8)
+#CmdParms=Device=0:4,OBC=0
+#Notes=S3C8 hacked combo
+#DevParms=Duration
+#DefaultCmd=0f 00
+#CmdIndex=1
+#Code.S3C80=28 60 02 8B 12 95 45 04 08 00 FA 03 D4 00 FA 01 \
+#           E0 0F 8C 07 D0 07 BC 20 10 00 11 E6 0D 00 8D 01 \
+#           46
+#Code.6805=06 0e 02 20 0f f4 f0 00 1c 04 08 02 26 03 82 08 \
+#          9b e2 06 06 33 5a 33 5b cd 01 83 cd 01 8c 24 f8 \
+#          81
+#
 [RECS80 (45)]
 PID=00 45
 DevParms=Device:3=0
@@ -2842,4 +2844,5 @@ Code.740=0A 17 01 80 12 8C 80 08 A0 00 05 06 1D 09 AD 00 \
 #            CA A3 DD 05 35 01 A8 00 00 08 76 00 01 6B 03 B6 \
 #            04 78 8D 01 46
 #
+
 
