Enable Sony12/15 protocol
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@132 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -1203,78 +1203,85 @@ Code.740=0B 1A 52 80 10 E1 72 10 08 08 01 7F 02 94 19 10 \
          80 03 2B 00 08 07 5D 06 E6 5B E6 69 80 0A E6 5B \
          A9 5F 85 71 A9 68 85 72 4C 00 FF
 
-#[Sony 12/15]
-#PID=00 CA
-#CmdTranslator=Translator(lsb)
-#CmdParms=OBC=0
-#Notes=single device
-#DevParms=Device 1,Device 2
-#FixedData=00 00 00
-#Code.S3C80=3A 8A 31 8B 14 F5 15 05 07 02 58 01 18 01 2C 01 \
-#           18 57 D0 04 B0 01 18 00 03 08 05 76 06 01 6B 04 \
-#           20 01 10 C0 10 C0 FB 03 E6 12 08 8D 01 49
-#Code.740=0A 18 31 80 12 A8 92 09 30 04 07 01 B6 01 B6 2B \
-#         F2 60 01 BA 01 05 18 A5 5F 17 60 03 E6 5C 0A 0A \
-#         90 03 3C 08 77 3C 02 83 4C 00 FF
-#
-#[Sony20]
-#PID=00 DE
-#CmdTranslator=Translator(lsb)
-#CmdParms=OBC=0
-#Notes=two device
-#DevParms=Main Device,Sub Device,Sony12 Device
-#FixedData=58 00 00
-#Code.S3C80=3A 8A 31 8B 14 F6 15 05 07 02 58 01 18 01 2C 01 \
-#           18 57 D0 04 B0 01 18 08 03 76 06 01 6B 06 E6 28 \
-#           F5 E6 01 02 8D 01 46
-#Code.740=0A 18 31 80 12 B8 92 09 30 05 07 01 B6 01 B6 2B \
-#         F2 60 01 BA 01 08 18 44 5D E6 5C 17 60 05 3C 02 \
-#         5B 7F 7E 3C 02 83 4C 00 FF
-#Code.6805=0A 19 31 20 12 B8 90 08 30 05 07 01 B5 01 B5 12 \
-#          C7 60 01 BA 00 08 18 A6 22 00 5D 02 A6 0A B7 53 \
-#          AE 07 B6 5D AD 3B AE 05 00 5D 0E B6 5A AD 32 AE \
-#          08 B6 5B AD 2C 3C 59 20 08 B6 5C B7 5A AD 22 17 \
-#          7B 33 5A B6 53 B7 54 A6 02 B7 7E B6 54 B7 53 CD \
-#          01 83 A6 AE 4A 26 FD 3A 53 26 F7 CD 01 8C 24 EB \
-#          81 48 25 02 3C 53 5A 26 F8 81
-#
-#[Sony Combo (old) ]
-#PID=00 27
-#VariantName=new
-#CmdTranslator=Translator(lsb)
-#CmdParms=OBC=0
-#Notes=12/15/20 Combo
-#DevParms=Sony20 subdev1,Sony20 subdev2,Sony20 subdev3,Sony20 subdev4
-#FixedData=00 00 00 00
-#DefaultHex=00 00
-#Code.S3C80=3A 8A 22 8B 15 F6 15 05 07 02 58 01 18 01 2C 01 \
-#           18 57 D0 04 B0 01 18 08 03 00 76 05 01 EB 1A E6 \
-#           28 C8 E6 12 00 E6 22 00 E6 24 05 E4 05 03 E4 06 \
-#           04 E6 10 00 E6 01 01 8B 02 00 11 8D 01 46
-#
-#[Sony Combo (new) ]
-#PID=00 27
-#VariantName=new
-#CmdTranslator=Translator(lsb)
-#CmdParms=OBC=0
-#Notes=12/15/20 Combo
-#DevParms=Sony20 subdev1,Sony20 subdev2,Sony20 subdev3,Sony20 subdev4
-#FixedData=00 00 00 00
-#DefaultHex=00 00
-#Code.S3C80=3A 8A 42 8B 15 F8 15 05 07 02 58 01 18 01 2C 01 \
-#           18 57 D0 04 B0 01 18 08 03 08 76 07 01 EB 17 76 \
-#           08 01 6B 0F E6 28 F9 E6 12 08 08 08 E0 C0 56 C0 \
-#           03 09 01 E6 24 05 8D 01 49
-#Code.740=0A 18 42 80 12 A8 92 09 30 05 07 01 B6 01 B6 2B \
-#         F2 60 01 BA 01 08 18 3C 05 5C 07 61 1E 17 62 18 \
-#         3C 01 5C 3C B8 7E A5 62 6A 29 03 AA B5 5D 85 5E \
-#         A5 62 85 5D 44 5D 80 03 3C 05 77 3C 02 83 4C 00 \
-#         FF
-#Code.6805=0F 23 42 20 13 F8 15 05 07 10 2B 96 00 95 96 2B \
-#          F2 00 20 57 96 08 03 08 00 5E 16 01 5F 0F A6 F9 \
-#          B7 7B A6 08 B7 67 B6 5F 46 A4 03 B7 58 A6 05 B7 \
-#          77 CC 01 B2
-#
+[Sony 12/15]
+PID=00 CA
+CmdTranslator=Translator(0,1,7) Translator(lsb,1,7)
+CmdParms=Device:0|1,OBC=0
+CmdParmInit=PickInitializer(0,N0,N2)
+Notes=single device
+DevParms=Device 1,Force Sony15:bool,Device 2,Force Sony15:bool
+DeviceTranslator=Translator(lsb,0,8) Translator(lsb,2,8,8) Sony1215Translator()
+FixedData=00 00 00
+Code.S3C80=3A 8A 31 8B 14 F5 15 05 07 02 58 01 18 01 2C 01 \
+           18 57 D0 04 B0 01 18 00 03 08 05 76 06 01 6B 04 \
+           20 01 10 C0 10 C0 FB 03 E6 12 08 8D 01 49
+Code.740=0A 18 31 80 12 A8 92 09 30 04 07 01 B6 01 B6 2B \
+         F2 60 01 BA 01 05 18 A5 5F 17 60 03 E6 5C 0A 0A \
+         90 03 3C 08 77 3C 02 83 4C 00 FF
+
+[Sony20]
+PID=00 DE
+CmdTranslator=Translator(lsb)
+CmdParms=OBC=0
+Notes=two device
+DevParms=Main Device:5,Sub Device,Sony12 Device
+DeviceTranslator=Translator(lsb,0,5) Translator(lsb,1,8,8) \
+                 Translator(lsb,2,8,16)
+FixedData=58 00 00
+Code.S3C80=3A 8A 31 8B 14 F6 15 05 07 02 58 01 18 01 2C 01 \
+           18 57 D0 04 B0 01 18 08 03 76 06 01 6B 06 E6 28 \
+           F5 E6 01 02 8D 01 46
+Code.740=0A 18 31 80 12 B8 92 09 30 05 07 01 B6 01 B6 2B \
+         F2 60 01 BA 01 08 18 44 5D E6 5C 17 60 05 3C 02 \
+         5B 7F 7E 3C 02 83 4C 00 FF
+Code.6805=0A 19 31 20 12 B8 90 08 30 05 07 01 B5 01 B5 12 \
+          C7 60 01 BA 00 08 18 A6 22 00 5D 02 A6 0A B7 53 \
+          AE 07 B6 5D AD 3B AE 05 00 5D 0E B6 5A AD 32 AE \
+          08 B6 5B AD 2C 3C 59 20 08 B6 5C B7 5A AD 22 17 \
+          7B 33 5A B6 53 B7 54 A6 02 B7 7E B6 54 B7 53 CD \
+          01 83 A6 AE 4A 26 FD 3A 53 26 F7 CD 01 8C 24 EB \
+          81 48 25 02 3C 53 5A 26 F8 81
+
+[Sony Combo (old)]
+PID=00 27
+VariantName=new
+CmdTranslator=Translator(lsb)
+CmdParms=OBC=0
+Notes=12/15/20 Combo
+DevParms=Sony20 subdev1,Sony20 subdev2
+DeviceTranslator=Translator(lsb,0,8) Translator(lsb,1,8,8)
+FixedData=00 00
+DefaultHex=00 00
+Code.S3C80=3A 8A 22 8B 15 F6 15 05 07 02 58 01 18 01 2C 01 \
+           18 57 D0 04 B0 01 18 08 03 00 76 05 01 EB 1A E6 \
+           28 C8 E6 12 00 E6 22 00 E6 24 05 E4 05 03 E4 06 \
+           04 E6 10 00 E6 01 01 8B 02 00 11 8D 01 46
+
+[Sony Combo (new)]
+PID=00 27
+VariantName=new
+CmdTranslator=Translator(lsb)
+CmdParms=OBC=0
+Notes=12/15/20 Combo
+DevParms=Sony20 subdev1,Sony20 subdev2,Sony20 subdev3,Sony20 subdev4
+DeviceTranslator=Translator(lsb,0,8) Translator(lsb,1,8,8) \
+                 Translator(lsb,2,8,16) Translator(lsb,3,8,24)
+FixedData=00 00 00 00
+DefaultHex=00 00
+Code.S3C80=3A 8A 42 8B 15 F8 15 05 07 02 58 01 18 01 2C 01 \
+           18 57 D0 04 B0 01 18 08 03 08 76 07 01 EB 17 76 \
+           08 01 6B 0F E6 28 F9 E6 12 08 08 08 E0 C0 56 C0 \
+           03 09 01 E6 24 05 8D 01 49
+Code.740=0A 18 42 80 12 A8 92 09 30 05 07 01 B6 01 B6 2B \
+         F2 60 01 BA 01 08 18 3C 05 5C 07 61 1E 17 62 18 \
+         3C 01 5C 3C B8 7E A5 62 6A 29 03 AA B5 5D 85 5E \
+         A5 62 85 5D 44 5D 80 03 3C 05 77 3C 02 83 4C 00 \
+         FF
+Code.6805=0F 23 42 20 13 F8 15 05 07 10 2B 96 00 95 96 2B \
+          F2 00 20 57 96 08 03 08 00 5E 16 01 5F 0F A6 F9 \
+          B7 7B A6 08 B7 67 B6 5F 46 A4 03 B7 58 A6 05 B7 \
+          77 CC 01 B2
+
 [Sony DSP]
 PID=01 42
 CmdTranslator=Translator(lsb)
