--- a/protocols.ini
+++ b/protocols.ini
@@ -754,11 +754,23 @@ Code.740=0B 1C 42 80 0E E3 72 10 08 08 01 7F 02 A1 5F 02 \
 
 [Panasonic2 (LCD)]
 PID=01 09
+DevParms=Main Device=128,Sub Device=72,Sub Device 2=0,OEM Dev1=2,OEM Dev2=32
+DeviceTranslator=Translator(lsb,0,8,24)  \
+                 Translator(lsb,1,8,32)  \
+                 Translator(lsb,2,8,0)   \
+                 Translator(lsb,3,8,8)   \
+                 Translator(lsb,4,8,16)
+FixedData=00 00 00 00 00
 CmdTranslator=Translator(lsb)
 CmdParms=OBC=0
-Notes=
-DevParms=Main Device,Sub Device 1,Sub Device 2
-FixedData=bf fb 00 00 00
+Notes=56 bit version of Panasonic\n\
+   \n\
+   The OEM values default to 2 and 32 (the only values used by Panasonic)\n\
+   If there is a 56 bit version of JVC-48, it would use 3 and 1 there.\n\
+   The Main Device and Sub Device are used in this protocol similarly to\n\
+   the way they are used in the more common Panasonic protocol.\n\
+   We don't yet know "Sub Device 2" really is.  The default value 0 matches\n\
+   all samples we've seen so far.
 Code.S3C80=45 91 51 8B 12 8F 45 08 08 00 DA 02 7B 00 DA 00 \
            C6 90 C9 06 D0 03 54 20 11 E4 05 09 B4 06 09 B4 \
            07 09 B4 08 09 8D 01 46
@@ -1208,7 +1220,15 @@ PID=00 CA
 CmdTranslator=Translator(0,1,7) Translator(lsb,1,7)
 CmdParms=Device:0|1,OBC=0
 CmdParmInit=PickInitializer(0,N0,N2)
-Notes=single device
+Notes=Combines two devices, each of which may be either Sony12 or Sony15\n\
+   \n\
+   Leaving the "Force Sony15" checkbox blank is almost always correct.\n\
+   Device numbers 32 and greater cannot be Sony12 and are automatically Sony15\n\
+   Device numbers less than 32 can be Sony12 or Sony15, but it is VERY rare for\n\
+   them to be Sony15.  When you leave the check box blank Device numbers less\n\
+   than 32 are Sony12, which is almost always correct.  Check "Force Sony15" to\n\
+   make the device number (just the one above that check box) be Sony15 even if\n\
+   it is less than 32.
 DevParms=Device 1,Force Sony15:bool,Device 2,Force Sony15:bool
 DeviceTranslator=Translator(lsb,0,8) Translator(lsb,2,8,8) Sony1215Translator()
 FixedData=00 00 00
